[package]
name = "holier-than-thou"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.34"
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
urlencoding = "2.1.3"
